# PG_004

./: .gitignore  PG_004_update_metadata_of_recording_files.md  README.md  makeDB.py  mydatabase.db  pyproject.toml  rec_comment_updater.py  rec_comment_updater_ver_JSON.py  rec_comment_updater_ver_REC.py  rec_comment_updater_ver_XLSX.py  rec_rename_files.py  rename_rec_files.py  xlsx_to_json.py
classes/: __init__.py
functions/: __init__.py  read_excel_note.py  rec_scanner.py  recovery.py  update_contents.py
test_files_for_rec_operation_programs/2023_09_26/: 2023_09_26-0000.tif.rec  2023_09_26-0001.tif.rec  2023_09_26-0002.tif.rec  2023_09_26-0003.tif.rec  2023_09_26-0004.tif.rec  2023_09_26-0005.tif.rec  2023_09_26-0006.tif.rec  2023_09_26-0007.tif.rec  2023_09_26-0008.tif.rec  2023_09_26-0009.tif.rec  2023_09_26-0010.tif.rec  2023_09_26-0011.tif.rec  2023_09_26-0012.tif.rec  2023_09_26-0013.tif.rec  2023_09_26-0014.tif.rec  2023_09_26-0015.tif.rec  2023_09_26-0016.tif.rec  2023_09_26-0017.tif.rec  2023_09_26-0018.tif.rec  2023_09_26-0019.tif.rec  2023_09_26-0020.tif.rec  2023_09_26-0021.tif.rec  2023_09_26-0022.tif.rec  2023_09_26-0023.tif.rec  2023_09_26-0024.tif.rec  2023_09_26-0025.tif.rec  2023_09_26-0026.tif.rec  2023_09_26-0027.tif.rec  2023_09_26-0028.tif.rec  2023_09_26-0029.tif.rec  2023_09_26-0030.tif.rec  2023_09_26-0031.tif.rec  2023_09_26-0032.tif.rec  2023_09_26-0033.tif.rec  2023_09_26-0034.tif.rec  2023_09_26-0035.tif.rec  (+10 more)
test_files_xlsx_to_json/: 2023_09_26_RECs.json  2023_09_26_dataLog.json  2024_09_26_ImgRecord.xlsx
ui/: analyzer.ui
(+5 files in other folders)
