[project]
name = "pg-004"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "datetime>=5.5",
    "glob2>=0.7",
    "pandas>=2.2.3",
    "pathlib>=1.0.1",
    "pyside6>6.8",
    "rich>=13.9.4",
    "tabulate>=0.9.0",
    "tifffile>=2025.1.10",
]
